crates/plotnik-tests/tests/03-analyze/self_recursion/no_progress_under_plus_quantifier.txt
E = [
  (E)+
  (x)
]
------------------ DIAGNOSTICS -------------------
error: infinite recursion: cycle makes no progress
 --> query.ptk:2:4
  |
2 |   (E)+
  |    ^
  |    |
  |    references itself
  |
help: match at least one syntax-tree node before recursing
help: make every path through this cycle match a syntax-tree node before it returns to `E`
-------------------- SYMBOLS ---------------------
E
  E (cycle)
